--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "react/react-in-jsx-scope": "off",
+    "react/react-in-jsx-scope": "off", // позволяет не импортировать React в компонентах
     "no-console": "off",
     "no-loop-func": ["error"],
     "eqeqeq": ["error", "always"],
